--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
     "url": "https://github.com/filipkis/endev/issues"
   },
   "homepage": "https://github.com/filipkis/endev",
-  "dependencies":{
-    "angular": "1.2.x || 1.3.x"
+  "dependencies": {
+    "angular": "1.3.x"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
+    "grunt-coffeelint": "0.0.10",
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.3.3",
     "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-coffeelint": "0.0.10",
-    "angular": "~1.2.16",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-notify": "^0.4.1",
+    "karma": "^0.12.16",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4"
   }
 }
