--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "homepage": "https://github.com/filipkis/endev",
   "dependencies": {
-    "angular": "1.3.x"
+    "angular": "1.3.x",
+    "underscore": "1.8.x",
+    "firebase": "2.2.x",
+    "angularfire":"1.0.x"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
