--- a/package.json
+++ b/package.json
@@ -16,24 +16,13 @@
     "angular": "1.3.x",
     "underscore": "1.8.x",
     "firebase": "2.2.x",
-    "angularfire":"1.0.x"
+    "angularfire": "1.0.x"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
-    "grunt-coffeelint": "0.0.10",
-    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-jasmine": "^0.8.2",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.3.3",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
     "grunt-html2js": "^0.3.0",
-    "grunt-notify": "^0.4.1",
-    "karma": "^0.12.16",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "grunt-notify": "^0.4.1"
   }
 }
