--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
   "homepage": "https://github.com/filipkis/endev",
   "dependencies": {
     "angular": "1.3.x",
-    "underscore": "1.8.x",
+    "angularfire": "1.0.x",
+    "coffee-script": "^1.9.3",
     "firebase": "2.2.x",
-    "angularfire": "1.0.x"
+    "gulp-concat": "^2.5.2",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "underscore": "1.8.x"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-html2js": "^0.3.0",
-    "grunt-notify": "^0.4.1"
+    "grunt-notify": "^0.4.1",
+    "gulp": "^3.9.0"
   }
 }
