--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
   },
   "homepage": "https://github.com/filipkis/endev",
   "dependencies": {
+    "angular": "^1.4.1",
+    "angularfire": "^1.1.1",
+    "browserify": "^10.2.4",
     "coffee-script": "^1.9.3",
+    "event-stream": "^3.3.1",
+    "firebase": "^2.2.7",
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-html2js": "^0.2.0",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0"
+    "stringify": "^3.1.0",
+    "underscore": "^1.8.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
