Put uglification back in the build process
The output file endev.full.js is now uglified, which reduces download
size dramatically. Of course, all the right source maps are generated so
debugging shouldn't be a problem.

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "angularfire": "^1.1.1",
     "browserify": "^10.2.4",
     "coffee-script": "^1.9.3",
+    "del": "^1.2.0",
     "event-stream": "^3.3.1",
     "firebase": "^2.2.7",
     "gulp": "^3.9.0",
     "gulp-ng-annotate": "^1.0.0",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
     "stringify": "^3.1.0",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
