--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "stringify": "^3.1.0",
+    "throws": "^0.1.7",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
