--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserify": "^10.2.4",
     "coffee-script": "^1.9.3",
     "del": "^1.2.0",
+    "equals": "^1.0.0",
     "event-stream": "^3.3.1",
     "extend": "^2.0.1",
     "firebase": "^2.2.7",
