--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp": "^3.9.0",
     "gulp-ng-annotate": "^1.0.0",
     "gulp-sourcemaps": "^1.5.2",
+    "value-on-path": "file:src/lib/value-on-path",
     "pixl-xml": "^1.0.3",
     "stringify": "^3.1.0",
     "throws": "^0.1.7",
