--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "bugs": {
     "url": "https://github.com/filipkis/endev/issues"
   },
+  "scripts": {
+    "build": "./node_modules/gulp/bin/gulp.js"
+  },
   "homepage": "https://github.com/filipkis/endev",
   "dependencies": {
     "angular": "^1.4.1",
