Replaced `equals` package with `object-contains`
Turns out that that at this particular place in the code, we want to
check whether or not one object "contains" another, not if two objects
are equal. This fixes the qwait-simple example.

--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "browserify": "^10.2.4",
     "coffee-script": "^1.9.3",
     "del": "^1.2.0",
-    "equals": "^1.0.0",
     "event-stream": "^3.3.1",
     "extend": "^2.0.1",
     "firebase": "^2.2.7",
     "gulp": "^3.9.0",
     "gulp-ng-annotate": "^1.0.0",
     "gulp-sourcemaps": "^1.5.2",
-    "value-on-path": "file:src/lib/value-on-path",
+    "object-contains": "^0.1.0",
     "pixl-xml": "^1.0.3",
     "stringify": "^3.1.0",
     "throws": "^0.1.7",
     "underscore": "^1.8.3",
+    "value-on-path": "file:src/lib/value-on-path",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
