--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp": "^3.9.0",
     "gulp-ng-annotate": "^1.0.0",
     "gulp-sourcemaps": "^1.5.2",
+    "jsonfile": "^2.2.1",
     "object-contains": "^0.1.0",
     "pixl-xml": "^1.0.3",
     "stringify": "^3.1.0",
