--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "angular": "1.3.x",
     "underscore": "1.8.x",
     "firebase": "2.2.x",
-    "angularfire":"1.0.x"
+    "angularfire": "1.0.x"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
+    "grunt-bump": "^0.7.0",
     "grunt-coffeelint": "0.0.10",
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-concat": "~0.5.1",
@@ -29,6 +30,7 @@
     "grunt-contrib-nodeunit": "~0.3.3",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-gh-pages": "^1.0.0",
     "grunt-html2js": "^0.3.0",
     "grunt-notify": "^0.4.1",
     "karma": "^0.12.16",
