--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "endev",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "The simplest way to work with data",
   "repository": {
     "type": "git",
@@ -26,7 +26,7 @@
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-jasmine": "^0.8.2",
-    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-nodeunit": "~0.3.3",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
