--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "homepage": "https://github.com/filipkis/endev",
   "dependencies": {
     "angular": "1.3.x",
-    "underscore": "1.8.x",
-    "firebase": "2.2.x",
-    "angularfire": "1.0.x"
+    "angularfire": "^1.0.0",
+    "firebase": "^2.2.3",
+    "jquery": "^3.1.0",
+    "underscore": "1.8.x"
   },
   "devDependencies": {
+    "browserify-shim": "^3.8.12",
+    "child_process": "^1.0.2",
     "grunt": "~0.4.4",
     "grunt-bump": "^0.7.0",
     "grunt-coffeelint": "0.0.10",
@@ -33,9 +36,15 @@
     "grunt-gh-pages": "^1.0.0",
     "grunt-html2js": "^0.3.0",
     "grunt-notify": "^0.4.1",
+    "gulp-bump": "^2.4.0",
+    "gulp-html2js": "^0.4.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.4",
     "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "karma-phantomjs-launcher": "^0.1.4",
+    "pixl-xml": "^1.0.7",
+    "watchify": "^3.7.0"
   }
 }
