--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-chrome-launcher": "^0.1.4",
     "karma-jasmine": "^0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
+    "run-sequence": "^1.2.2",
     "watchify": "^3.7.0"
   }
 }
